feat: 自定义拦截器
补充注释
添加关于页面

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,5 +10,9 @@
     密码：<input type="password" name="password"><br>
     <input type="submit" value="提交"/>
 </form>
+<br>
+<a href="image/avatar.png">跳转图片</a>
+<br>
+<a href="about.html">关于</a>
 </body>
 </html>
