--- a/src/main/resources/static/menu.html
+++ b/src/main/resources/static/menu.html
@@ -5,11 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>登录成功</h1>
+<h1>跳转成功</h1>
 <br>
-<a href="menu.html">菜单</a>
-<br>
-<br>
-<a href="login.html">返回</a>
+<a href="main.html">返回</a>
 </body>
 </html>
