--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -8,6 +8,7 @@
 <form method="post" action="/login">
     用户名：<input type="text" name="username"><br>
     密码：<input type="password" name="password"><br>
+    记住我：<input type="checkbox" name="remember-me" value="true"><br>
     <input type="submit" value="提交"/>
 </form>
 <br>
